# tower-examples

./: .gitignore
.dlt/: config.toml
01-hello-world/: README.md  Towerfile  pyproject.toml  task.py
02-dlthub-pipeline/: .gitignore  README.md  Towerfile  pipeline.py  pyproject.toml  requirements.txt  snowflake_create_database.sql
02-dlthub-pipeline/.dlt/: config.toml  (+1 more)
02-dlthub-s3-to-snowflake/: .gitignore  README.md  Towerfile  pipeline.py  pyproject.toml
03-dlthub-s3-to-motherduck/: README.md  Towerfile  pipeline.py  pyproject.toml
03-scheduled-dlthub-pipeline/: Towerfile  chess_pipeline.py
04-dlthub-data-pond/: .gitignore  README.md  Towerfile  dlt_project.yml  requirements.txt  task.sh
05-iceberg-write/: .gitignore  README.md  Towerfile  iceberg_table_write.py  requirements.txt
05-write-data-to-iceberg/: README.md  Towerfile  pyproject.toml  requirements.txt  write_iceberg_table.py
05-write-ticker-data-to-iceberg/: .gitignore  README.md  Towerfile  pyproject.toml  requirements.txt  task.py  utils.py
06-analyze-data-in-iceberg/: README.md  Towerfile  analyze_iceberg_table.py  pyproject.toml  requirements.txt
06-analyze-ticker-data-in-iceberg/: .gitignore  README.md  Towerfile  pyproject.toml  requirements.txt  task.py
06-iceberg-analyze/: README.md  Towerfile  iceberg_analyze_with_polars.py  requirements.txt
07-deepseek-summarize-github/: README.md  Towerfile  app.py  pyproject.toml  requirements.txt  summarize.py
07-deepseek-summarize-github/core/: actions.py
07-deepseek-summarize-github/core/inference/: huggingface.py  llama3instruct.py  ollama.py  pytorch.py
07-deepseek-summarize-github/core/readers/: dlt.py  files.py  github.py
07-deepseek-summarize-github/core/transforms/: github.py
07-deepseek-summarize-github/core/writers/: dlt.py
07-dlthub-portable-datalake/: dlt_project.yml  main.py  profiles.yml  pyproject.toml
08-dlt-plus-iceberg/: .gitignore  dlt.yml  pyproject.toml  requirements.txt  run.py
08-fan-out/: README.md  Towerfile  pyproject.toml  requirements.txt  task.py
08-fan-out-ticker-runs/: README.md  Towerfile  pyproject.toml  requirements.txt  task.py
09-run-duckdb-queries-on-iceberg/: Towerfile  main.py  pyproject.toml  requirements.txt
11-trim-ticker-table/: README.md  Towerfile  pyproject.toml  requirements.txt  task.py
13-ticker-update-agent/: .gitignore  README.md  Towerfile  agent.py  pyproject.toml  requirements.txt
14-dbt-core-ecommerce-analytics/: .gitignore  README.md  Towerfile  _dbt.py  dbt-core-research.md  pyproject.toml  seed.py  task.py
14-dbt-core-ecommerce-analytics/dbt-project/: ecommerce-starter.md
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/: .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.example.yml
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/macros/: readme.md
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/models/: sources.yml
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/models/marts/: exposures.yml
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/models/marts/core/: dim_customers.sql  dim_date.sql  dim_geography.sql  dim_products.sql  dim_sellers.sql  fact_order_items.sql  schema.yml
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/models/staging/: schema.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
14-dbt-core-ecommerce-analytics/dbt-project/olist_dbt/snapshots/: customer_snapshot.sql  seller_snapshot.sql
14-running-marimo-in-tower/: README.md  Towerfile  main.py  pyproject.toml
15-interactive-marimo-notebook/: Towerfile  main.py  notebook.py  pyproject.toml  readme.md
16-sling-data/: Towerfile  main.py  pyproject.toml  sling.yaml
17-list-catalog-tables/: README.md  Towerfile  pyproject.toml  task.py
18-read-table-rows/: README.md  Towerfile  pyproject.toml  task.py
23-nyse-top100-stocks/: Towerfile  pyproject.toml  task.py
(+54 files in other folders)
