[project]
name = "05-write-ticker-data-to-iceberg"
version = "0.1.0"
description = "Downloads ticker data like open, close, volume from YFinance and writes to an Iceberg table"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tower[iceberg]",
    "yfinance",
    "h11>=0.16.0"
]
