[project]
name = "07-deepseek-summarize-github"
version = "0.1.0"
description = "Develop with DeepSeek R1 on local GPUs, deploy with serverless inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt==1.4.0",
    "ollama",
    "transformers",
    "huggingface-hub>=0.34.3",
    "tower>=0.3.24",
    "pyarrow",
    "polars",
    "pyiceberg"
]
