[project]
name = "13-ticker-update-agent"
version = "0.1.0"
description = "Update ticker data for a list of tickers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.29.0",
    "tower>=0.3.27",
    "pyiceberg",
    "pyarrow",
    "langchain==0.3.25",
    "langchain_openai",
    "langchain-ollama",
    "langsmith",
    "langchain-community",
    "yfinance",
]
