[project]
name = "13-ticker-update-agent"
version = "0.1.0"
description = "Update ticker data for a list of tickers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tower[iceberg]",
    "langchain==0.3.25",
    "langchain_openai",
    "langsmith",
    "langchain-community",
    "yfinance",
]
